[测试]  学习 WeakReference 使用